# iam-axiom-verifier

./: .env.example  .gitignore  README.md  auditar_riesgo.py  aws_fetcher.py  engine.py  llm_translator.py  models.py  parser.py  pyproject.toml  requirements.txt  smt_solver.py
.github/workflows/: pypi-publish.yml
data/: aws_prices_quotas.json  policy_dataeng.json  policy_devteam.json
docs/: iam-axiom-readonly-policy.json
src/: models.py
src/aws/: fetcher.py  parser.py  sync_aws.py
src/core/: smt_solver.py
src/data/: aws_prices_quotas.json  policy_devteam.json
src/llm/: router.py
tools/: sync_aws.py
